--- a/style.css
+++ b/style.css
@@ -80,3 +80,25 @@ footer ul li a p {
 footer ul li:hover {
     opacity: 1;
 }
+@media (max-width: 1080px) {
+    header nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+    header nav {
+        margin: 0 auto;
+        width: 100%;
+    }
+    header nav ul li a p {
+        text-align: center;
+        font-size: 32px;
+    }
+    .nav2 img {
+        width: 0px;
+        height: 0px;
+    }
+    .nav2 {
+        width: 0px !important;
+        height: 0px;
+    }
+}
